--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "redux-saga-routines": "^3.2.3",
     "redux-thunk": "^2.3.0",
